--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
   "homepage": "https://github.com/ultracoolbru/Solidity#readme",
   "dependencies": {
     "@drizzle/store": "^1.5.3",
-    "ganache": "^7.5.0",
+    "ganache": "^7.5.0"
+  },
+  "devDependencies": {
+    "chai": "^4.3.6",
     "mocha": "^10.1.0"
   }
 }
